--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html, body, header{
 	background-color: transparent;
 }
 section{
-	padding: 60px 0;
+	padding: 60px 0;background: white;
 }
 .no-padding{
 	padding: 0 !important;
@@ -50,6 +50,9 @@ section{
 }
 
 /* nav */
+nav{
+    transition: .5s;
+}
 .nav-link {
     color: white;
 }
@@ -65,6 +68,7 @@ section{
 .dark-header{
 	background-color: #7d675c;
 	transition: .3s;
+    padding-top: 10px !important;
 }
 
 
@@ -187,6 +191,7 @@ section{
 	background-color: #c8b29a;
 }
 
+/* about section */
 #about-section .office-pic {
     min-height: 450px;
     background-position: center;
@@ -202,23 +207,52 @@ section{
 #about-section h2{
 	color: white;
 }
- #about-section p{
- 	color: gray;
- }
+#about-section p{
+	color: gray;
+}
 
+/* project section */
+#project-section .card{
+	margin: 0;
+	border-radius: 0;transition: .3s;
+}
+#project-section .card img{
+	border-radius: 0 !important;
+}
+#project-section .img-holder {
+    overflow: hidden;
+    min-height: 240px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+#project-section .img-holder .view-opt {
+    position: absolute;
+    top: 0;
+    transition: .5s;
+    height: 0;
+    width: 100%;
+    background-color: rgba(77, 52, 39, 0.60);
+}
+#project-section .card:hover .img-holder .view-opt{
+    height: 100%;
+    width: 100%;
+    transition: .3s;
+}
+/*#project-section .img-holder img {
+    height: 100%;
+    transform: scale(1.2);
+    transform-origin: center;
+}*/
 
- #project-section .card{
- 	margin: 0;
- 	border-radius: 0;
- }
-  #project-section .card img{
- 	border-radius: 0 !important;
- }
-
+/* video section */
 #video-section {
     max-height: 500px;
     height: 100%;
-    background-image: url(../img/vid_bg.jpg);
+    /*background-image: url(../img/vid_bg.jpg);*/
+    overflow: hidden;
+position: relative;
+background: rgba(0,0,0,.5);
 }
 #video-section div {
 
@@ -242,6 +276,13 @@ section{
 }
 .inner-play button:hover{
     transform: scale(1.3);
+}
+#video-section > img {
+    position: fixed;
+    bottom: 0;
+    z-index: -1;
+    transform-origin: right;
+    width: 100%;
 }
 /* counter section */
 #serv-section {
@@ -271,7 +312,7 @@ section{
 }
 
 
-
+/* footer section */
 #footer-top {
 
     background-color: #191919;
@@ -281,4 +322,15 @@ section{
 
     background-color: #111111;
 
+}
+
+
+@media only screen and (max-width: 767px) {
+    #service-section hr, #serv-section hr {
+        width: 50px;
+    }
+
+    #project-section .card-deck{
+        margin: 0 auto;
+    }
 }
