--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ section{
 	color: white;
 }
 .parallax-mirror {
-    top: 18px !important;
+    /* top: 18px !important; */
 }
 .arrow-up {
 	width: 0; height: 0; border-left: 15px solid #f2232300; border-right: 15px solid #0000; border-bottom: 15px solid white; position: absolute; bottom: 0; left: 20px;
