--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,13 @@ nav{
 	border-radius: 0 !important;
 }
 #project-section .img-holder {
-    overflow: hidden; min-height: 240px; background-size: cover; background-position: center; position: relative; text-align: center;
+	overflow: hidden;
+	min-height: 240px;
+	height: 100%;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	text-align: center;
 }
 #project-section .img-holder .view-opt {
     position: absolute;
@@ -203,7 +209,7 @@ nav{
    height: 100%; width: 100%; transition: .3s;bottom: 0;
 }
 #project-section .card .img-holder .view-opt ul {
-   padding: 0; list-style: none; display: table-cell;vertical-align: middle;
+	top: 0; transition: .3s;
 }
 #project-section .card .img-holder .view-opt ul li {
    display: inline-block; padding: 0 10px; width: 50px; height: 50px; border-radius: 100%; transition: .3s;
