--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@ html, body, header{
 	       url('../fonts/fontawesome-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 /* global */
+body{
+	 font-family: 'Montserrat', sans-serif;
+}
 .transpaarent{
 	background-color: transparent;
 }
@@ -48,12 +51,16 @@ section{
 	background-color: #726457;
 	color: white;
 }
-.parallax-mirror {
-    /* top: 18px !important; */
+/* firefox only */
+@-moz-document url-prefix() {
+	.parallax-mirror {
+       top: 18px !important;
+   }
 }
 .arrow-up {
-	width: 0; height: 0; border-left: 15px solid #f2232300; border-right: 15px solid #0000; border-bottom: 15px solid white; position: absolute; bottom: 0; left: 20px;
+	width: 0; height: 0; border-left: 15px solid #f2232300; border-right: 15px solid #0000; border-bottom: 15px solid white; position: absolute; bottom: 0; left: 20px; transition: .3s;
 }
+.card-deck {width: 100%;}
 
 /* nav */
 nav{
@@ -184,32 +191,23 @@ nav{
 	margin: 0;
 	border-radius: 0;transition: .3s;
 }
+.card-body{
+	transition: .3s;
+}
 #project-section .card img{
 	border-radius: 0 !important;
 }
 #project-section .img-holder {
-	overflow: hidden;
-	min-height: 240px;
-	height: 100%;
-	background-size: cover;
-	background-position: center;
-	position: relative;
-	text-align: center;
+	overflow: hidden; min-height: 240px; height: 100%; background-size: cover; background-position: center; position: relative; text-align: center;
 }
 #project-section .img-holder .view-opt {
-    position: absolute;
-    /* top: 0; */
-    transition: .5s;
-    height: 0;
-    width: 100%;
-    background-color: rgba(77, 52, 39, 0.60);
-	 overflow: hidden;display: table;bottom: 100%;
+    position: absolute; top: -100%; transition: .5s; height: 240px; width: 100%; background-color: rgba(77, 52, 39, 0.60); overflow: hidden;display: table;
 }
 #project-section .card:hover .img-holder .view-opt{
-   height: 100%; width: 100%; transition: .3s;bottom: 0;
+   top: 0; width: 100%; transition: .3s;
 }
 #project-section .card .img-holder .view-opt ul {
-	top: 0; transition: .3s;
+   padding: 0; list-style: none; display: table-cell;vertical-align: middle;
 }
 #project-section .card .img-holder .view-opt ul li {
    display: inline-block; padding: 0 10px; width: 50px; height: 50px; border-radius: 100%; transition: .3s;
@@ -222,46 +220,81 @@ nav{
     background-color: rgba(0,0,0,.5);
     transform: scale(1.2);
 }
+#project-section .card:hover .arrow-up{
+	border-bottom: 15px solid #372f2d;
+}
+#project-section .card:hover .card-body{
+	background-color: #372f2d;
+	color: white;
+}
+
 
 /* video section */
-#video-section {
-    max-height: 500px;
-    height: 100%;
-    /*background-image: url(../img/vid_bg.jpg);*/
-    overflow: hidden;
-position: relative;
-background: rgba(0,0,0,.5);
-}
-#video-section div {
+#video-section { max-height: 500px; height: 100%; overflow: hidden; position: relative; background: rgba(0,0,0,.5); }
+#video-section div {height: 100%;}
+.play-container { display: table; text-align: center; width: 100%;}
+.inner-play { display: table-cell; vertical-align: middle; }
+.inner-play button { border-radius: 100%; padding: 10px; background-color: rgba(0,0,0,.5); transition: .3s; }
+.inner-play button:hover{ transform: scale(1.3); }
+#video-section > img { position: fixed; bottom: 0; z-index: -1; transform-origin: right; width: 100%; }
 
-    height: 100%;
+/* post section */
+#post-section .img-holder{
+	min-height: 240px;background-position: center;background-size: cover;position: relative;
+}
+.date-post {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    border-radius: 10px;
+	 text-align: center;
+color: white;
+font-size: 20px;
+z-index: 2;
+}
+.date-post .date {
+    background-color: rgba(31, 31, 31, 0.52);
+    padding: 0px 15px;
+	     border-top-left-radius: 3px;
+		      border-top-right-radius:: 3px;
+}
+.date-post .month {
+    background-color: rgba(0, 0, 0, 0.79);
+    padding: 7px 5px;
+	 border-bottom-left-radius: 3px;
+	 border-bottom-right-radius:: 3px;
+    font-size: 13px;
+}
+.back-drop {
+    position: absolute;
+    height: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.12);
+    z-index: 1;
+	 transition: .3s;
+}
+#post-section .card:hover .back-drop{
+	height: 100%;
+}
+#post-section .card:hover .card-body{
+	background-color: #372f2d;
+}
+#post-section .card:hover .card-body a{
+	color: #bcab97;
+}
+#post-section .card .card-body .card-title a{
+	color: #555555;
+	text-decoration: none;
+}
+#post-section .card:hover .card-body p{
+	color: #ffffff;
+}
+#post-section .card .card-body a{
+	color: #c4af94;
+}
 
-}
-.play-container {
-    display: table;
-    text-align: center;
-    width: 100%;
-}
-.inner-play {
-    display: table-cell;
-    vertical-align: middle;
-}
-.inner-play button {
-    border-radius: 100%;
-    padding: 10px;
-    background-color: rgba(0,0,0,.5);
-    transition: .3s;
-}
-.inner-play button:hover{
-    transform: scale(1.3);
-}
-#video-section > img {
-    position: fixed;
-    bottom: 0;
-    z-index: -1;
-    transform-origin: right;
-    width: 100%;
-}
+
+
 /* counter section */
 #serv-section {
     background: #211b19;
@@ -297,9 +330,17 @@ background: rgba(0,0,0,.5);
 
 }
 #footer-bottom {
-
     background-color: #111111;
-
+	 padding: 15px 0;
+font-size: 12px;
+color: rgba(255, 255, 255, 0.16);
+ font-family: 'Montserrat', sans-serif;
+}
+#footer-bottom a {
+    color: rgba(255, 255, 255, 0.53);
+}
+#footer-bottom a:hover{
+	text-decoration: none;
 }
 
 
