--- a/css/style.css
+++ b/css/style.css
@@ -325,10 +325,56 @@ z-index: 2;
 
 /* footer section */
 #footer-top {
-
     background-color: #191919;
-
 }
+.comp-about p {
+    color: rgba(255, 255, 255, 0.54);
+}
+.comp-about a.read-more {
+    color: rgba(255, 255, 255, 0.8);
+}
+.comp-info {
+    position: relative;
+}
+.comp-info p {
+    margin: 0;
+    line-height: 22px;
+    color: rgba(255, 255, 255, 0.54);
+}
+.comp-info a {
+    color: rgba(255, 255, 255, 0.8);
+}
+ul.social-media {
+    text-align: right;
+	 padding: 0;
+	 position: absolute;
+top: 0;
+right: 0;
+margin: 0;
+}
+ul.social-media li {
+    display: inline-block;
+	 width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    border: 1px solid white;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+ul.social-media li a {
+    height: 100%;
+    width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    padding-top: 4px;
+}
+
+
+
+
+
+
 #footer-bottom {
     background-color: #111111;
 	 padding: 15px 0;
@@ -352,4 +398,10 @@ color: rgba(255, 255, 255, 0.16);
     #project-section .card-deck{
         margin: 0 auto;
     }
+
+	 ul.social-media {
+	    text-align: center;
+	    padding: 0;
+	    position: static;
+	 }
 }
