--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,23 @@ section{
 	background-color: #0b3948;
 	color: white;
 }
+.close-this-modal {
+    position: relative;
+    z-index: 3;
+    color: red;
+    font-size: 63px;
+    line-height: 0px;
+    margin-right: -12px;
+    margin-top: -12px;
+    background-color: #ffffff !important;
+    height: 45px;
+    width: 45px;
+    border-radius: 100%;
+    opacity: 1;
+}
+.close-this-modal:hover{
+	opacity:1 !important;
+}
 /* firefox only */
 @-moz-document url-prefix() {
 	.parallax-mirror {
@@ -259,6 +276,20 @@ nav.dark-header .active a.nav-link, a.nav-link:hover {
 .inner-play button { border-radius: 100%; padding: 10px; background-color: rgba(0,0,0,.5); transition: .3s; }
 .inner-play button:hover{ transform: scale(1.3); }
 #video-section > img { position: fixed; bottom: 0; z-index: -1; transform-origin: right; width: 100%; }
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 
 /* post section */
 #post-section .img-holder{
