--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,10 @@ section{
 .close-this-modal:hover{
 	opacity:1 !important;
 }
+button.navbar-toggler {
+    font-size: 30px;
+    color: white;
+}
 /* firefox only */
 @-moz-document url-prefix() {
 	.parallax-mirror {
